# MeedyaManager

./: .editorconfig  .env.example  .gitattributes  .gitignore  .rustfmt.toml  =1.47  Cargo.toml  Dev_Notes.md  PROJECT_STATUS.md  Project_Plan.md  README.md  clippy.toml  deny.toml  justfile  meedyamanager_cli.py  meedyamanager_gui.py  pyproject.toml  requirements.txt  rust-toolchain.toml
.claude/: CLAUDE.md  ProjectBrief_Chat.claude  ProjectBrief_Chat_orig.claude  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md  ui_feedback.md
.github/workflows/: audit.yml  build-artifacts.yml  build-installers.yml  ci-linux.yml  ci-macos.yml  ci-rust.yml  ci-windows.yml  docs.yml  pr-gate.yml  python-app.yml  release.yml  test-suite.yml  version-bump.yml
assets/: icon.icns
cli/: __init__.py  __main__.py  metadata_debugger.py  runner.py
cli/commands/: __init__.py  config_cmd.py  debug.py  edit.py  gui.py  lookup.py  report_bug.py  rule.py  scan.py  watch.py
config/: filetypes.json5  settings.json5  tags.json5
config/schemas/: codecs.schema.json  filetypes.schema.json  settings.schema.json  tags.schema.json
core/: __init__.py  classify_media.py  companion_tracker.py  metadata_extractor.py  renamer.py  rule_engine.py  state_manager.py  tag_registry.py  watcher.py
crates/mm-cli/: Cargo.toml
crates/mm-cli/src/: context.rs  main.rs  output.rs
crates/mm-cli/src/commands/: config_cmd.rs  debug.rs  edit.rs  export.rs  lookup.rs  mod.rs  report_bug.rs  rule.rs  scan.rs  serve.rs  service_cmd.rs  watch.rs
crates/mm-cloud/: Cargo.toml
crates/mm-cloud/src/: dropbox.rs  google_drive.rs  icloud.rs  lib.rs  mega.rs  onedrive.rs  sync_manager.rs  traits.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: error.rs  filetype_registry.rs  i18n.rs  integrity.rs  lib.rs  service.rs  settings_bundle.rs  test_mode.rs  useragent.rs
crates/mm-core/src/classify/: mod.rs
crates/mm-core/src/companion/: mod.rs
crates/mm-core/src/config/: mod.rs
crates/mm-core/src/health/: mod.rs
crates/mm-core/src/logging/: mod.rs
crates/mm-core/src/metadata/: mod.rs  tag_registry.rs
crates/mm-core/src/renamer/: mod.rs
crates/mm-core/src/rule_engine/: evaluator.rs  functions.rs  lexer.rs  mod.rs  parser.rs  tag_registry.rs
crates/mm-core/src/state/: mod.rs
crates/mm-core/src/watcher/: mod.rs
crates/mm-export/: Cargo.toml
crates/mm-export/src/: lib.rs  mariadb.rs  mssql.rs  mysql.rs  postgres.rs  schema.rs  sqlite.rs  traits.rs
crates/mm-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/mm-ffi/src/: callbacks.rs  capi.rs  lib.rs  mm_ffi.udl  types.rs  uniffi_api.rs
crates/mm-gtk/: Cargo.toml
crates/mm-gtk/src/: app.rs  lib.rs  main.rs  state.rs
crates/mm-gtk/src/ui/: accessibility.rs  cloud_panel.rs  error_dialog.rs  export_panel.rs  lookup_panel.rs  main_window.rs  metadata_panel.rs  mod.rs  rules_panel.rs  scan_panel.rs  server_panel.rs  settings_panel.rs
crates/mm-providers/: Cargo.toml
crates/mm-providers/src/: cover_art.rs  credentials.rs  http.rs  lib.rs  match_scoring.rs  rate_limiter.rs  registry.rs  traits.rs
crates/mm-providers/src/identifiers/: mod.rs
crates/mm-providers/src/music/: mod.rs
crates/mm-providers/src/podcasts/: mod.rs
crates/mm-providers/src/video/: mod.rs
crates/mm-server/: Cargo.toml
crates/mm-server/src/: auth.rs  lib.rs  routes.rs  streaming.rs
crates/mm-update/: Cargo.toml
crates/mm-update/src/: checker.rs  lib.rs  release.rs
docs/: Dev_Notes.md  branding-icons.md  changelog.md  roadmap.md
docs/issues/: github_issues.md  issue_128_accessibility.md  issue_130_translation_support.md
docs/wiki/: CI-CD-Pipelines.md  Release-Process.md  Version-Management.md
help/: background-service.md  cli-reference.md  configuration.md  custom-filetypes.md  custom-tags.md  faq.md  file-integrity.md  getting-started.md  index.md  privacy-policy.md  rule-syntax.md  settings-export-import.md  supported-formats.md  test-mode.md  troubleshooting.md
help/providers/: amazon-music.md  apple-music.md  apple-podcasts.md  apple-tv.md  deezer.md  eidr.md  iheart.md  imdb.md  isrc.md  iswc.md  itunes-store.md  musicbrainz.md  pandora.md  shazam.md  spotify.md  tidal.md  tmdb.md  tvdb.md  youtube-music.md
include/: mm_ffi.h
linux/appimage/: build-appimage.sh
linux/deb/: build-deb.sh  control
linux/flatpak/: com.mwbm.MeedyaManager.desktop  com.mwbm.MeedyaManager.metainfo.xml  com.mwbm.MeedyaManager.yaml  (+3 more)
locales/: TRANSLATORS.md
macos/: MeedyaManager.entitlements  Package.swift
metadata/: __init__.py  editor.py  lookup_service.py  multi_value.py
scripts/: generate_brand_assets.py  generate_icons.sh
tests/: conftest.py  test_batch_rename_simulation.py  test_char_replacer.py  test_classify_media_sanity.py  test_cli_config.py  test_cli_debug.py  test_cli_edit.py  test_cli_lookup.py  test_cli_rule.py  test_cli_scan.py  test_cli_version.py  test_companion_tracker.py  test_config_profile.py  test_config_required_key.py  test_cover_art_manager.py  test_credentials.py  test_env_loader.py  test_error_dialog.py  test_error_messages.py  test_error_reporter.py  test_exception_handler.py  test_extractor_integration.py  test_gui_lookup.py  test_gui_preview_model.py  test_gui_smoke.py  test_health_check.py  test_import_resolution.py  test_log_config.py  test_lookup_service.py  test_match_scoring.py  test_mediainfo_loader.py  test_metadata_debugger.py  test_metadata_editor_gui.py  test_metadata_extractor.py  test_multi_value.py  test_path_integrity.py  test_provider_amazon_music.py  test_provider_apple_music.py  test_provider_apple_podcasts.py  test_provider_apple_tv.py  (+30 more)
ui/: __init__.py  app.py  error_dialog.py  lookup_panel.py  main_window.py  metadata_editor.py  platform_style.py  preview_panel.py  rule_builder.py  settings_dialog.py  system_tray.py  workers.py
ui/themes/: dark.qss  (+1 more)
utils/: char_replacer.py  config_loader.py  config_profile.py  env_loader.py  error_messages.py  error_reporter.py  exception_handler.py  health_check.py  log_config.py  mediainfo_loader.py  verify_checksum.py
windows/: MeedyaManager.sln
(+101 files in other folders)
