# (C) 2025-2026 MWBM Partners Ltd (d/b/a MW Services)
# MeedyaManager — Cross-platform media file manager and auto-organizer
# License: GPL-2.0-or-later

[workspace]
# All Rust crates in the monorepo
members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
    "crates/mm-gtk",
]

# Exclude Linux-only GTK4 crate from default builds (requires system GTK4 libs)
# Build explicitly with: cargo build -p mm-gtk
default-members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
]

# Shared dependency versions — all crates inherit these
[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
authors = ["MWBM Partners Ltd <dev@mwbm.co.uk>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/MWBMPartners/MeedyaManager"
description = "Cross-platform media file manager and auto-organizer"
rust-version = "1.85"

# Shared dependency versions to keep all crates in sync
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system watching
notify = "7"

# Metadata reading/writing
lofty = "0.22"

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Regex
regex = "1"

# Credential storage
keyring = "3"

# OAuth2
oauth2 = "5"

# JWT
jsonwebtoken = "9"

# Rate limiting
governor = "0.7"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Testing
wiremock = "0.6"
tempfile = "3"
