# (C) 2025-2026 MWBM Partners Ltd
# MeedyaManager — Cross-platform media file manager and auto-organizer
# License: GPL-2.0-or-later

[workspace]
resolver = "3"
# All Rust crates in the monorepo
members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-update",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
    "crates/mm-gtk",
]

# Exclude Linux-only GTK4 crate from default builds (requires system GTK4 libs)
# Build explicitly with: cargo build -p mm-gtk
default-members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-update",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
]

# Shared dependency versions — all crates inherit these
[workspace.package]
version = "1.2.0"
edition = "2024"
authors = ["MWBM Partners Ltd <dev@mwbm.co.uk>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/MWBMPartners/MeedyaManager"
description = "Cross-platform media file manager and auto-organizer"
rust-version = "1.85"

# Shared dependency versions to keep all crates in sync
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system watching
notify = "7"

# Metadata reading/writing
lofty = "0.22"

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Regex
regex = "1"

# Credential storage
keyring = "3"

# OAuth2
oauth2 = "5"

# JWT
jsonwebtoken = "9"

# Rate limiting
governor = "0.7"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Platform directories
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing (for PII redaction)
sha2 = "0.10"

# UUID generation (for state management)
uuid = { version = "1", features = ["v4"] }

# Unix process checking (for lock file PID verification)
libc = "0.2"

# Internationalisation — GNU gettext bindings for translatable strings
gettextrs = "0.15"

# Semantic version comparison (mm-update)
semver = { version = "1", features = ["serde"] }

# Testing
wiremock = "0.6"
tempfile = "3"

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Development builds — fast compile, debug symbols, no optimisation.
# `cargo build` (no flags) uses this.
[profile.dev]
opt-level = 0          # No optimisation — fastest compilation
debug = true           # Full debug info for gdb/lldb/rust-analyzer
incremental = true     # Enable incremental compilation

# Release builds — full optimisation, stripped symbols.
# `cargo build --release` or CI release workflow uses this.
[profile.release]
opt-level = 3          # Maximum speed optimisation (O3)
lto = "fat"            # Full link-time optimisation across all codegen units
codegen-units = 1      # Single codegen unit maximises LTO effectiveness
strip = "symbols"      # Strip debug symbols from the binary (reduces size ~30-60%)
panic = "abort"        # Abort on panic (no unwinding machinery — smaller binary)
debug = false          # No debug info in release builds
incremental = false    # Disable incremental compilation for reproducible builds

# Distribution profile — like release but also strips debuginfo and DWARF.
# Used by the `release.yml` GitHub Actions workflow for final shipped artifacts.
# Run with: cargo build --profile dist
[profile.dist]
inherits = "release"
strip = "debuginfo"    # Strip DWARF debug info as well as symbol table
debug = 0              # No debug information whatsoever
lto = "fat"            # Redundant but explicit for clarity
codegen-units = 1      # Redundant but explicit for clarity

# Test profile — inherits dev but with enough optimisation for timing tests.
[profile.test]
opt-level = 1          # Minimal optimisation for faster test execution
debug = true           # Keep debug info for test failure tracebacks
