# (C) 2025-2026 MWBM Partners Ltd
# MeedyaManager — Cross-platform media file manager and auto-organizer
# License: GPL-2.0-or-later

[workspace]
resolver = "3"
# All Rust crates in the monorepo.
# NOTE: mm-gtk is intentionally EXCLUDED from the workspace because it depends
# on gettextrs (GNU gettext C bindings) which requires system libraries only
# available on Linux.  Cargo resolves ALL workspace member dependencies even
# when building a single crate, so including mm-gtk here breaks macOS/Windows
# CI.  Build it explicitly with:  cargo build --manifest-path crates/mm-gtk/Cargo.toml
members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-update",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
]

# mm-gtk is excluded from the workspace (see above).  All workspace members
# are default-members so a plain `cargo build` / `cargo test` covers everything
# except the Linux GTK4 crate.
default-members = [
    "crates/mm-core",
    "crates/mm-providers",
    "crates/mm-cloud",
    "crates/mm-update",
    "crates/mm-export",
    "crates/mm-server",
    "crates/mm-cli",
    "crates/mm-ffi",
]

# Explicit exclusion — without this, cargo auto-includes any subdirectory
# package as a workspace member, so `cargo build --manifest-path crates/mm-gtk/Cargo.toml`
# fails with "current package believes it's in a workspace when it's not".
exclude = ["crates/mm-gtk"]

# Shared dependency versions — all crates inherit these
[workspace.package]
version = "1.3.0"
edition = "2024"
authors = ["MWBM Partners Ltd <dev@mwbm.co.uk>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/MWBMPartners/MeedyaManager"
description = "Cross-platform media file manager and auto-organizer"
rust-version = "1.85"

# Shared dependency versions to keep all crates in sync
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system watching
notify = "7"

# Metadata reading/writing
lofty = "0.22"

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Regex
regex = "1"

# Credential storage
keyring = "3"

# OAuth2
oauth2 = "5"

# JWT
jsonwebtoken = "9"

# Rate limiting
governor = "0.7"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Platform directories
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing (for PII redaction)
sha2 = "0.10"

# UUID generation (for state management)
uuid = { version = "1", features = ["v4"] }

# Unix process checking (for lock file PID verification)
libc = "0.2"

# Internationalisation — GNU gettext bindings for translatable strings
# Package name on crates.io is "gettext-rs"; lib name is "gettextrs"
gettextrs = { version = "0.7", package = "gettext-rs" }

# Semantic version comparison (mm-update)
semver = { version = "1", features = ["serde"] }

# Testing
wiremock = "0.6"
tempfile = "3"

# ---------------------------------------------------------------------------
# Workspace-wide lint configuration — all crates inherit via lints.workspace = true
# ---------------------------------------------------------------------------
[workspace.lints.clippy]
# Enable pedantic and nursery lint groups as warnings for code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow noisy pedantic lints that don't improve code quality in this project
module_name_repetitions = "allow"       # e.g. MmError in mm_core::error
missing_errors_doc = "allow"            # We use detailed comments instead
missing_panics_doc = "allow"            # We use detailed comments instead
must_use_candidate = "allow"            # Too noisy for internal APIs
struct_excessive_bools = "allow"        # Config structs legitimately need multiple bools
doc_markdown = "allow"                  # Product names, env vars don't need backticks
too_many_lines = "allow"               # Complex match arms in classify/tag_registry
wildcard_imports = "allow"              # Used in test modules
cognitive_complexity = "allow"           # Complex parser/evaluator logic is inherent
option_if_let_else = "allow"            # Often less readable than if-let
redundant_pub_crate = "allow"           # Explicit pub(crate) is clearer
significant_drop_tightening = "allow"   # False positives with lock guards
return_self_not_must_use = "allow"      # Builder pattern methods don't need #[must_use]
missing_const_for_fn = "allow"          # Many functions can't be const in practice
cast_possible_truncation = "allow"      # Numeric casts in audio/video metadata are intentional
cast_sign_loss = "allow"                # Ditto — metadata values are always positive in practice
cast_precision_loss = "allow"           # u64→f64 for display/progress calculations is acceptable
cast_possible_wrap = "allow"            # PID casts (u32→i32) are safe on all supported platforms
items_after_statements = "allow"        # Helper functions inside test blocks are idiomatic
match_same_arms = "allow"              # Explicit arms improve readability in classify/registry
float_cmp = "allow"                     # Audio duration/bitrate comparisons are exact-value checks
trivially_copy_pass_by_ref = "allow"    # Small types passed by ref for API consistency
needless_pass_by_value = "allow"        # Some pass-by-value is required for trait bounds
unnecessary_wraps = "allow"             # Result returns kept for future error handling paths
let_and_return = "allow"               # Named return values improve readability
or_fun_call = "allow"                   # unwrap_or(String::new()) is more readable than alternatives
map_unwrap_or = "allow"                 # map().unwrap_or() is often clearer than map_or()
redundant_else = "allow"                # Explicit else blocks can improve readability
iter_without_into_iter = "allow"        # Not all iterables need IntoIterator
manual_let_else = "allow"              # if-let can be clearer than let-else in some contexts
clone_on_ref_ptr = "allow"              # Arc::clone() vs .clone() is a style choice
implicit_hasher = "allow"               # HashMap<K,V> in APIs is fine; no need for BuildHasher
ref_option = "allow"                    # &Option<T> in trait methods matches existing APIs
case_sensitive_file_extension_comparisons = "allow" # Extensions in our registry are always lowercase
trait_duplication_in_bounds = "allow"   # False positive with serde derive macros

[workspace.lints.rust]
# Warn on unsafe code — mm-ffi allows it explicitly via #![allow(unsafe_code)]
unsafe_code = "warn"

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Development builds — fast compile, debug symbols, no optimisation.
# `cargo build` (no flags) uses this.
[profile.dev]
opt-level = 0          # No optimisation — fastest compilation
debug = true           # Full debug info for gdb/lldb/rust-analyzer
incremental = true     # Enable incremental compilation

# Release builds — full optimisation, stripped symbols.
# `cargo build --release` or CI release workflow uses this.
[profile.release]
opt-level = 3          # Maximum speed optimisation (O3)
lto = "fat"            # Full link-time optimisation across all codegen units
codegen-units = 1      # Single codegen unit maximises LTO effectiveness
strip = "symbols"      # Strip debug symbols from the binary (reduces size ~30-60%)
panic = "abort"        # Abort on panic (no unwinding machinery — smaller binary)
debug = false          # No debug info in release builds
incremental = false    # Disable incremental compilation for reproducible builds

# Distribution profile — like release but also strips debuginfo and DWARF.
# Used by the `release.yml` GitHub Actions workflow for final shipped artifacts.
# Run with: cargo build --profile dist
[profile.dist]
inherits = "release"
strip = "debuginfo"    # Strip DWARF debug info as well as symbol table
debug = 0              # No debug information whatsoever
lto = "fat"            # Redundant but explicit for clarity
codegen-units = 1      # Redundant but explicit for clarity

# Test profile — inherits dev but with enough optimisation for timing tests.
[profile.test]
opt-level = 1          # Minimal optimisation for faster test execution
debug = true           # Keep debug info for test failure tracebacks
