# ============================================================================
# File: /pyproject.toml
# (C) 2025-2026 MWBM Partners Ltd (d/b/a MW Services)
#
# Description:
# PEP 621 packaging metadata for MeedyaManager.
# Defines project metadata, dependencies, entry points, and optional
# dependency groups for GUI, development, and build tooling.
#
# Build backend: hatchling (lightweight, PEP 621-compliant)
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meedyamanager"
version = "1.5-M6"
description = "Cross-platform media file manager and auto-organizer"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "MWBM Partners Ltd", email = "dev@mwbmpartners.ltd" },
]
keywords = ["media", "organizer", "metadata", "renamer", "music", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

# --- Core Runtime Dependencies ---
dependencies = [
    "pymediainfo>=6.0",
    "mutagen>=1.47",
    "watchdog>=4.0",
    "json5>=0.9",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.5",
    "httpx>=0.28",
    "tenacity>=9.0",
    "spotipy>=2.24",
    "musicbrainzngs>=0.7",
    "deezer-python>=7.0",
    "tidalapi>=0.8",
    "ytmusicapi>=1.8",
    "shazamio>=0.7",
    "tmdbsimple>=2.9",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43.0",
    "keyring>=25.0",
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.25",
]

# --- Optional Dependency Groups ---
[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
    "darkdetect>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nuitka>=2.5",
    "ordered-set>=4.1",
]

# --- CLI & GUI Entry Points ---
[project.scripts]
meedyamanager = "cli:cli"

[project.gui-scripts]
meedyamanager-gui = "ui.app:launch_gui"

# --- Hatch Build Configuration ---
[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "metadata", "utils", "ui", "config"]

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
