# (C) 2025-2026 MWBM Partners Ltd (d/b/a MW Services)
# MeedyaManager — GTK4/Adwaita GUI crate (Linux desktop)
# Provides the native Linux desktop interface via GTK4 and libadwaita.

[package]
name = "mm-gtk"
description = "GTK4/Adwaita desktop GUI for MeedyaManager (Linux)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Binary target — the actual desktop application
[[bin]]
name = "meedya-gtk"
path = "src/main.rs"

# Library target — exposes modules for unit testing without display access
[lib]
name = "mm_gtk"
path = "src/lib.rs"

[dependencies]
# Internal crate — core business logic (scan, metadata, rules, watcher)
mm-core = { path = "../mm-core" }

# Internal crate — metadata lookup providers (M5)
mm-providers = { path = "../mm-providers" }

# Internal crate — database export (M9)
mm-export = { path = "../mm-export" }

# Async runtime — needed to drive mm-providers async search from a background thread
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# GTK4 Rust bindings — native Linux widget toolkit (wraps GTK 4.16)
gtk4 = { version = "0.9", features = ["v4_10"] }

# Libadwaita — GNOME adaptive UI: AdwTabView, AdwHeaderBar, AdwPreferencesPage, etc.
libadwaita = { version = "0.7", features = ["v1_4"] }

# Serialization — used for JSON config display in the settings panel
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform directories — config path resolution for settings panel
dirs = "6"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
# Temporary files and directories for file-based unit tests
tempfile = "3"
