# (C) 2025-2026 MWBM Partners Ltd
# MeedyaManager — GTK4/Adwaita GUI crate (Linux desktop)
# Provides the native Linux desktop interface via GTK4 and libadwaita.

[package]
name = "mm-gtk"
description = "GTK4/Adwaita desktop GUI for MeedyaManager (Linux)"
# NOTE: mm-gtk is `exclude`d from the root Cargo.toml [workspace] (it depends
# on gettextrs which needs Linux system libs that break macOS/Windows CI).
# Excluded crates CANNOT inherit `*.workspace = true` from the root manifest,
# so all package metadata is inlined here. Keep these in sync with the root
# Cargo.toml [workspace.package] if it changes.
version = "1.3.0"
edition = "2024"
authors = ["MWBM Partners Ltd <dev@mwbm.co.uk>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/MWBMPartners/MeedyaManager"
rust-version = "1.85"

# Binary target — the actual desktop application
[[bin]]
name = "meedya-gtk"
path = "src/main.rs"

# Library target — exposes modules for unit testing without display access
[lib]
name = "mm_gtk"
path = "src/lib.rs"

[dependencies]
# Internal crate — core business logic (scan, metadata, rules, watcher)
mm-core = { path = "../mm-core" }

# Internal crate — metadata lookup providers (M5)
mm-providers = { path = "../mm-providers" }

# Internal crate — database export (M9)
mm-export = { path = "../mm-export" }

# Internal crate — secure media server (M10)
mm-server = { path = "../mm-server" }

# Async runtime — needed to drive mm-providers async search from a background thread
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# GTK4 Rust bindings — native Linux widget toolkit (wraps GTK 4.16)
gtk4 = { version = "0.9", features = ["v4_10"] }

# Libadwaita — GNOME adaptive UI: AdwTabView, AdwHeaderBar, AdwPreferencesPage,
# AdwAlertDialog (1.5+), AdwAboutDialog (1.5+).
# Ubuntu 24.04 ships libadwaita 1.5 in libadwaita-1-dev — matches the v1_5 feature.
libadwaita = { version = "0.7", features = ["v1_5"] }

# Serialization — used for JSON config display in the settings panel
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform directories — config path resolution for settings panel
dirs = "6"

# Internationalisation — initialise gettext locale at GTK startup
# (cannot use `{ workspace = true }` because mm-gtk is excluded from the workspace)
gettextrs = { version = "0.7", package = "gettext-rs" }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
# Temporary files and directories for file-based unit tests
tempfile = "3"
